--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "ccometixline"
+name = "cubenceline"
 version = "1.0.8"
 edition = "2021"
-description = "CCometixLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
+description = "CubenceLine (ccline) - High-performance Claude Code StatusLine tool written in Rust"
 authors = ["Haleclipse"]
 license = "MIT"
-repository = "https://github.com/username/CCometixLine"
+repository = "https://github.com/username/CubenceLine"
 readme = "README.md"
 keywords = ["claude", "statusline", "powerline", "rust", "claude-code"]
 categories = ["command-line-utilities", "development-tools"]
