--- a/npm/main/package.json
+++ b/npm/main/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cometix/ccline",
   "version": "0.0.0",
-  "description": "CCometixLine - High-performance Claude Code StatusLine tool",
+  "description": "CubenceLine - High-performance Claude Code StatusLine tool",
   "bin": {
     "ccline": "./bin/ccline.js"
   },
@@ -17,7 +17,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Haleclipse/CCometixLine"
+    "url": "https://github.com/Haleclipse/CubenceLine"
   },
   "keywords": ["claude", "statusline", "claude-code", "rust", "cli"],
   "author": "Haleclipse",
