--- a/npm/platforms/linux-x64/package.json
+++ b/npm/platforms/linux-x64/package.json
@@ -1,13 +1,13 @@
 {
   "name": "@cometix/ccline-linux-x64",
   "version": "0.0.0",
-  "description": "Linux x64 binary for CCometixLine",
+  "description": "Linux x64 binary for CubenceLine",
   "files": ["ccline"],
   "os": ["linux"],
   "cpu": ["x64"],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Haleclipse/CCometixLine"
+    "url": "https://github.com/Haleclipse/CubenceLine"
   },
   "author": "Haleclipse",
   "license": "MIT"
