--- a/npm/platforms/linux-x64-musl/package.json
+++ b/npm/platforms/linux-x64-musl/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "@cometix/ccline-linux-x64-musl",
-  "version": "0.0.0",
+  "name": "@cubence/cubenceline-linux-x64-musl",
+  "version": "1.0.1",
   "description": "Linux x64 static binary for CubenceLine (musl libc)",
-  "files": ["ccline"],
+  "files": ["cubenceline"],
   "os": ["linux"],
   "cpu": ["x64"],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Haleclipse/CubenceLine"
+    "url": "https://github.com/Cubence-com/CubenceLine.git"
   },
   "author": "Haleclipse",
   "license": "MIT"
