chore: prepare for npm release
- Update .gitignore to exclude npm platform binaries
- Code formatting updates (rustfmt)
- Ready for npm release to @cubence organization

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ CLAUDE.md
 PRD.md
 .claude/
 tests/
+
+# npm platform binaries (build artifacts)
+npm/platforms/*/cubenceline
+npm/platforms/*/cubenceline.exe
+npm-publish/
